syntax = "proto3";
package pulse.cdm.bind;
option java_package = "pulse.cdm.bind";
option csharp_namespace = "pulse.cdm.bind";
option optimize_for = SPEED;

import "pulse/cdm/bind/Inhaler.proto";
import "pulse/cdm/bind/Actions.proto";

message AnyInhalerActionData
{
  oneof Action
  {
    InhalerConfigurationData Configuration       = 1;
  }
}

message InhalerActionData
{
  ActionData                 Action              = 1;
}

/** @brief The configuration of the inhaler to use. */
message InhalerConfigurationData
{
  InhalerActionData          InhalerAction       = 1;
  oneof Option
  {
    InhalerData              Configuration       = 2;/**<< @brief An inhaler object with properties to set in the system inhaler. */
    string                   ConfigurationFile   = 3;/**<< @brief File containing an inhaler objet with properties to set in the system inhaler. */
  }
}
